--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body{
     margin: 0;
     padding: 0;
-}
-.section1{
     font-family: 'Poppins', sans-serif;
+}
+.display-flex{
     display: flex;
     margin-bottom: 100px;
 }
@@ -21,7 +21,7 @@ body{
 }
 h1{
     font-size: 60px;
-    border-left: 7px solid;
+    border-left: 5px solid;
     border-image: linear-gradient(rgb(255, 102, 0),tomato);
     border-image-slice: 1;
     padding-left: 15px;
@@ -33,4 +33,28 @@ h1{
     border-radius: 5px;
     color: white;
     font-weight: 600;
+}
+.section2-h1{
+    text-align: center;
+}
+.section2-style{
+    width: 80%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 10px 40px gray;
+    padding: 50px;
+    border-radius: 30px;
+    border: 1px solid gray;
+  
+}
+.section2-style img{
+    width: 50%;
+}
+#section2-div1{
+    background-color: #edf5f7;
+}
+#section2-div2{
+    background-color: #ffeeee;
+}
+#section2-div3{ background-color:#fff4d6;
 }
