p hero section added

--- a/style.css
+++ b/style.css
@@ -1,30 +1,32 @@
 body{
-    margin: 20px 0px 0px 0px;
+    margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
 }
 .display-flex{
     display: flex;
-    margin-bottom: 150px;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
-    padding-left: 6%;
-    padding-right: 6%;
+    padding-left: 7%;
+    padding-right: 7%;
     padding-top: 50px;
 }
 .half-width img{
     width: 90%;
 }
 .orange-color{
-    color: orange;
+    color: rgb(251, 114, 23);
 }
-h1{
-    font-size: 60px;
+.h1-style{
+    font-size: 40px;
     border-left: 5px solid;
     border-image: linear-gradient(rgb(255, 102, 0),tomato);
     border-image-slice: 1;
     padding-left: 15px;
+    line-height: 40px;
+    font-family: 'DM Serif Display', serif;
 }
 h2{
     font-size: 30px;
@@ -44,6 +46,7 @@ h2{
 }
 .section2-h1{
     text-align: center;
+    font-size: 50px;
 }
 .section2-style{
     width: 85%;
@@ -69,11 +72,16 @@ h2{
 .section3-img img{
     width: 70%;
 }
+.last-img img{
+    width: 50%;
+    box-shadow: 10px 10px 30px gray;
+}
 .footer{
     text-align: center;
     background-color: rgb(22, 20, 20);
     color: white;
     padding: 20px 0px;
+    margin-top: 200px;
 }
 
 /* All Background Image */
@@ -89,3 +97,17 @@ h2{
     background-size: 150px 350px;
     background-position: right;
 }
+#section4-bg-img{
+    background-image: url(./shapes/shape-4.png);
+    background-repeat: no-repeat;
+    background-size: 300px 300px;
+}
+#phero-section{
+    box-shadow: 10px 10px 40px rgb(83, 82, 82);
+    padding: 20px 0px 10px 0px;
+    border-radius: 0px 0px 50px 50px;
+    background-image: url(./shapes/shape-6.png);
+    background-repeat: no-repeat;
+    background-size: 30%;
+    background-position:initial;
+}   
