--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ h2{
     font-size: 40px;
     font-weight: 900;
 }
+h3{
+    text-align: center;
+    font-size: 25px;
+}
 .button-style{
     text-decoration: none;
     padding: 15px 40px;
@@ -76,12 +80,15 @@ h2{
     width: 50%;
     box-shadow: 10px 10px 30px gray;
 }
+ul li{
+    font-size: 20px;
+}
 .footer{
     text-align: center;
     background-color: rgb(22, 20, 20);
     color: white;
     padding: 20px 0px;
-    margin-top: 200px;
+    margin-top: 100px;
 }
 
 /* All Background Image */
@@ -102,12 +109,10 @@ h2{
     background-repeat: no-repeat;
     background-size: 300px 300px;
 }
-#phero-section{
-    box-shadow: 10px 10px 40px rgb(83, 82, 82);
-    padding: 20px 0px 10px 0px;
-    border-radius: 0px 0px 50px 50px;
-    background-image: url(./shapes/shape-6.png);
-    background-repeat: no-repeat;
-    background-size: 30%;
-    background-position:initial;
-}   
+.skill-width{
+    width: 30%;
+    margin: 30px 50px 100px 50px;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 20px;
+    padding: 10px 10px 30px 10px;
+}
