--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body{
 .display-flex{
     display: flex;
     margin-bottom: 100px;
+    justify-content: center;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+.justify{
+    text-align: justify;
 }
 .half-width{
     width: 50%;
@@ -76,6 +82,10 @@ h3{
 .section3-img img{
     width: 70%;
 }
+#text-center{
+    text-align: center;
+    margin-bottom: 50px;
+}
 .last-img img{
     width: 50%;
     box-shadow: 10px 10px 30px gray;
@@ -83,12 +93,33 @@ h3{
 ul li{
     font-size: 20px;
 }
+.contact-area{
+    width: 30%;
+    text-align: center;
+}
+.font-size{
+    font-size: 20px;
+}
+.icon-size{
+    font-size: 45px;
+}
+.skill-width{
+    width: 30%;
+    margin: 30px 50px 50px 50px;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 20px;
+    padding: 10px 10px 30px 10px;
+}
 .footer{
     text-align: center;
     background-color: rgb(22, 20, 20);
     color: white;
     padding: 20px 0px;
     margin-top: 100px;
+}
+#footer-font-style{
+    font-family: 'Lobster', cursive;
+    font-size: 30px;
 }
 
 /* All Background Image */
@@ -99,20 +130,13 @@ ul li{
     background-size: 300px 300px;
 }
 #section3-bg-img{
-    background-image: url(./shapes/shape-10.png);
+    background-image: url(./shapes/shape-1.png);
     background-repeat: no-repeat;
-    background-size: 150px 350px;
+    background-size: 200px 200px;
     background-position: right;
 }
 #section4-bg-img{
     background-image: url(./shapes/shape-4.png);
     background-repeat: no-repeat;
     background-size: 300px 300px;
-}
-.skill-width{
-    width: 30%;
-    margin: 30px 50px 100px 50px;
-    box-shadow: 10px 10px 40px gray;
-    border-radius: 20px;
-    padding: 10px 10px 30px 10px;
 }
